- Fixed a bug that caused the spectator spinner to appear targetting another player when it isn't


- Teams are now set when the players are teleported to the arena rather than when someone types /dm start
- Players can now use /setteam or /team to choose whether they want to be in red, blue or either
- Players can now right-click other players before a 2-Player Teams match starts to team up with a specific player
- Updated pickup spawn areas and mechanics
- Reviving other players takes 2 seconds now, but the time it takes doubles every time a player is revived
- Added the Telltale Heart, which can be equipped when reviving someone to reduce the revival time to 2 seconds at the cost of the revivee's health
- Players in a team can now press T to open Team Chat, which will send messages only other members of your team can see
- Spectators can now use the spectator spinner (as it used to only be available for dead players)
- Other spectators can no longer be selected on the spectator spinner (only applies to ghosts; you can still watch another person's dead body if you want to)
- Wilson and Webber can now use /setlook to change their appearance
- Players marked as AFK will now enter spectator mode at the end of every match (so please only use /afk to stay in spectator mode)

v19.6
- Added server tag (Deathmatch servers can now be searched for by typing "deathmatch")
- Improved support for player-hosting and dedicated server setup (getting closer to release)
- Fixed crash with Pith Pike
- Added health bar icons for the new characters
- Fixed Wormwood's visual effects persisting through spectator mode
- Fixed various bugs with team-based game modes and the telltale heart
- Fixed rare crash when a match ends

v19.7
- Fixed some /setstate bugs with Wormwood, Wilson and Webber
- Fixed some server-crashing exploits

- Webber and Wilson will now have the beard skin respective to their main skin when they spawn in
- Increased size of player health list